<resources>
    <string name="app_name">Reserver App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="didn_t_get_otp_resend">Didn\'t Get OTP?    <b>Resend</b></string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_venue">Add Venue</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="bangla">বাংলা</string>
    <string name="english">English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="venue_list">Venue List</string>
    <string name="venue_photo">Venue Photo</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Title -->
    <string name="settings_languages">Languages</string>
    <string name="select_language">Select Language</string>
    <string name="summery_select_language">Select Application Language</string>
    <string name="_880">+880</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="continue_word">Continue</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_the_otp_code_we_sent_to_your_number">Enter the OTP code we sent to your number</string>
    <string name="submit">Submit</string>


    <string name="notifications">Notifications</string>
    <string name="send_notification">Send Notification</string>
    <string name="title">Title</string>
    <string name="image_url">Image URL</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reserver">Reserver</string>
    <string name="the_venue_booking_app">The Venue Booking App</string>
    <string name="require">Require</string>
    <string name="book_venue">Book Venue</string>
    <string name="booking">Booking</string>

    <array name="booking_slot">
        <item>Day Shift</item>
        <item>Night Shift</item>
    </array>

</resources>