<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home">
    </item>

    <item android:id="@+id/menu_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile">

    </item>

    <item android:id="@+id/menu_booking"
        android:icon="@drawable/ic_baseline_booking_24"
        android:title="@string/booking">
    </item>

    <item android:id="@+id/menu_add_venue"
        android:icon="@drawable/ic_baseline_add_venue_24"
        android:title="@string/add_venue">

    </item>

    <item android:id="@+id/menu_logout"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/logout">

    </item>




</menu>