<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.Login"
    android:background="#EFEFEF"
    android:orientation="vertical">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_baseline_phone_android_24" />

        <LinearLayout
            android:id="@+id/phoneL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@android:style/Widget.Material.Light.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_phone_number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:ems="10"
                android:hint="+880 1xxxxxxxxx"
                android:inputType="phone"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="clip_horizontal"
                android:text="@string/continue_word" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/otpL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@android:style/Widget.Material.Light.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verification_code"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/code_sent_textView"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_otp_code_we_sent_to_your_number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/otp_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/resend_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_get_otp_resend"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="clip_horizontal"
                android:text="@string/submit" />
        </LinearLayout>


    </LinearLayout>
