<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NotificationSenderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/notification_sender_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#cddb7f"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/send_notification"
        app:titleTextColor="#03101B">

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/notificationTitle_editText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_design"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textShortMessage"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_sender_toolbar" />

    <EditText
        android:id="@+id/notificationImageUrl_editText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_design"
        android:ems="10"
        android:hint="@string/image_url"
        android:inputType="textUri"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationMessage_editText" />

    <EditText
        android:id="@+id/notificationMessage_editText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_design"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textLongMessage"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationTitle_editText" />

    <Button
        android:id="@+id/notificationSend_button"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#CCDA81"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationImageUrl_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>